2004-12-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl: Replaced use of memchan null channel with the systems
	NUL device (NUL or /dev/null). This avoids problems with clashing
	names when memchan gets included.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-07-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl: Try and fix up the use of Trf with Memchan for the
	new-style md5 package. Needs fixed recent versions of both
	packages.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.tcl: Updated version number to sync with 1.6.1
	* md5.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.tcl: Rel. engineering. Updated version number 
	* md5.man:  of md5 v2 to reflect its changes, to 2.0.1.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.tcl: Rel. engineering. Updated version number 
	* md5.man:  of md5 v2 to reflect its changes, to 2.0.1.
	* pkgIndex.tcl:

2004-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5x.tcl: Added -- to end options if using Trf's hex in case the
	  hash begins with a - character (possible).  Streamlined the <<<
	  proc.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5x.test: Heh. What a surprise. The testsuite uses a command to
	  generate the proper error message based on the version of Tcl,