@@ -8,7 +8,7 @@
 # Copyright (c) 2001 by ActiveState Tool Corp.
 # All rights reserved.
 #
-# RCS: @(#) $Id: md5x.test,v 1.7 2004/12/03 02:08:30 patthoyts Exp $
+# RCS: @(#) $Id: md5x.test,v 1.8 2005/02/17 14:29:30 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
@@ -138,6 +138,38 @@ if {$::md5::usetrf || $::md5::usemd5c || 1} {
     set ::md5::usetrf $usetrf
     set ::md5::usemd5c $usemd5c
 }
+
+test md5-5.1 {Check hashing data that begins with hyphen} {
+    list [catch {::md5::md5 -hex -hello} msg] $msg
+} {0 110CD19610AD6247F30263C882670CC1}
+
+test md5-5.2 {Check hashing data that begins with hyphen} {
+    list [catch {::md5::md5 -hex -- -hello} msg] $msg
+} {0 110CD19610AD6247F30263C882670CC1}
+
+test md5-5.3 {Check hashing data that begins with hyphen} {
+    list [catch {::md5::md5 -hex --} msg] $msg
+} {0 CFAB1BA8C67C7C838DB98D666F02A132}
+
+test md5-5.4 {Check hashing data that begins with hyphen} {
+    list [catch {::md5::md5 -hex -- --} msg] $msg
+} {0 CFAB1BA8C67C7C838DB98D666F02A132}
+
+test md5-6.1 {Check hmac data that begins with hyphen} {
+    list [catch {::md5::hmac -hex -key "" -hello} msg] $msg
+} {0 6C39C49DA482D110B72B72F24E082E0F}
+
+test md5-6.2 {Check hmac data that begins with hyphen} {
+    list [catch {::md5::hmac -hex -key "" -- -hello} msg] $msg
+} {0 6C39C49DA482D110B72B72F24E082E0F}
+
+test md5-6.3 {Check hmac data that begins with hyphen} {
+    list [catch {::md5::hmac -hex -key "" --} msg] $msg
+} {0 8EB61D377088779210AD82659AECD631}
+
+test md5-6.4 {Check hmac data that begins with hyphen} {
+    list [catch {::md5::hmac -hex -key "" -- --} msg] $msg
+} {0 8EB61D377088779210AD82659AECD631}
 
 # -------------------------------------------------------------------------
 
